Bug 119836 - Interactive gradient tool cannot be toggled off
Summary: Interactive gradient tool cannot be toggled off
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-13 08:36 UTC by Heiko Tietze
Modified: 2018-09-14 13:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2018-09-13 08:36:13 UTC
In Draw/Impress we have the interactive gradient tool (Toolbars > Transformations > "Gradient"; active when the shape has a gradient), which is a toggle function and activated per click. Now the expectation is to switch it off when clicking the icon again but that doesn't work. The only chance to disable the interactive tool is when you leave the object (and come back).

Patch for bug 119689 provides access to the function per context menu. The toggle function receives correctly a checkbox that cannot be switched off too.
Comment 1 Maxim Monastirsky 2018-09-13 10:04:51 UTC
The gradient tool behaves like all other drawing tools in Impress/Draw (drawing shapes, zoom and pan etc.): It doesn't turn off on subsequent clicks, but it still can be turned off by clicking the selection tool, or by pressing esc (when the focus is in the document area). But while this behavior is essential for the locking mechanism when drawing shapes (where a second click locks the function instead of turning it off, see Bug 39268 and Bug 90748), it doesn't fit so well for other functions like gradient or zoom, where turning the function off on subsequent click might be a better idea.

Added Bug 118840 to 'See Also', which is a similar report about the zoom button.
Comment 2 Heiko Tietze 2018-09-13 10:41:52 UTC
Escape leaves the object and thereby it ends the transformation. "Sticky" toolbar buttons should always have an option to exit this mode. The rotate feature is prototypically implemented.
Comment 3 Maxim Monastirsky 2018-09-13 22:28:49 UTC
https://gerrit.libreoffice.org/60472/
Comment 4 Commit Notification 2018-09-14 13:07:41 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb0a38c178179493f4c86314f78c5de75d18a482

tdf#119836 tdf#118840 Toggle behavior for some draw commands

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.