tdf#119836 tdf#118840 Toggle behavior for some draw commands

Keeping a function active after a subsequent click only makes sense
for shape drawing, as it's used to lock the function so more that one
shape can be drawn in a row. Otherwise just do what users expect, and
turn the function off.

Affected commands:

.uno:Mirror
.uno:Crop
.uno:InteractiveTransparence
.uno:InteractiveGradient
.uno:Shear
.uno:CrookRotate
.uno:CrookSlant
.uno:CrookStretch
.uno:ConvertInto3DLathe
.uno:ZoomMode
.uno:ZoomPanning

Change-Id: Ic441cd72423cbc0570c4a070402b474e85b5084b